<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/popup_window_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/popup_window_view_with_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:cardCornerRadius="3dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/popup_window_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popup_window_background_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/lnlMilkText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/edtTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/time"
                        android:inputType="time"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        tools:ignore="Autofill"
                        tools:text="13:20" />

                    <EditText
                        android:id="@+id/edtMilkAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/milk_in_ml"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="30sp"
                        tools:ignore="Autofill"
                        tools:text="130" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lnlCheckBoxes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lnlMilkText">

                    <CheckBox
                        android:id="@+id/chkDiaperChange"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/ic_changing_diaper" />

                    <CheckBox
                        android:id="@+id/chkVitaminD"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableEnd="@mipmap/ic_vitamin_d_foreground" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lnlMenu"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"

                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lnlCheckBoxes">

                    <Button
                        android:id="@+id/btnCancel"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/cancel"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp" />

                    <Button
                        android:id="@+id/btnOk"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/ok"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="30sp" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>